<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.sekelenao</groupId>
    <artifactId>FlinkWorkflowsWithChainedEvents</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>Producers</module>
        <module>DelayWorkflow</module>
    </modules>

    <properties>

        <dependency.flinkboot.version>0.1.0-1.20</dependency.flinkboot.version>
        <dependency.small-yaml.version>0.2.0</dependency.small-yaml.version>
        <dependency.logback.version>1.5.34</dependency.logback.version>

        <java.version>11</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    </properties>

    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>io.github.sekelenao</groupId>
                <artifactId>flinkboot</artifactId>
                <version>${dependency.flinkboot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>io.github.sekelenao</groupId>
                <artifactId>small-yaml</artifactId>
                <version>${dependency.small-yaml.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>